--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,85 @@
-# Compiled class file
+# Gradle
+.gradle/
+build/
+!gradle/wrapper/gradle-wrapper.jar
+!**/src/main/**/build/
+!**/src/test/**/build/
+
+# IntelliJ IDEA
+.idea/
+*.iml
+*.ipr
+*.iws
+out/
+
+# Eclipse
+.classpath
+.project
+.settings/
+bin/
+tmp/
+
+# VS Code
+.vscode/
+
+# macOS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Windows
+*.tmp
+*.temp
+*.bak
+*.swp
+*~.nib
+local.properties
+
+# Log files
+*.log
+logs/
+
+# Compiled class files
 *.class
 
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
+# JAR files
 *.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+!gradle-wrapper.jar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+# Maven
+target/
 
-# Kotlin Gradle plugin data, see https://kotlinlang.org/docs/whatsnew20.html#new-directory-for-kotlin-data-in-gradle-projects
+# Kotlin
 .kotlin/
+kotlin-js-store/
+
+# Node modules (if using Node.js tools)
+node_modules/
+
+# Test results
+test-results/
+*.xml
+
+# Coverage reports
+coverage/
+*.exec
+
+# Generated documentation
+docs/generated/
+
+# Local configuration files
+local.properties
+gradle.properties.local
+
+# Signing files
+*.jks
+*.keystore
+
+# Secrets and keys
+secrets/
+*.key
+*.pem
