--- a/.github/workflows/auto-format.yml
+++ b/.github/workflows/auto-format.yml
@@ -17,7 +17,7 @@ jobs:
         ref: ${{ github.head_ref }}
         
     - name: Set up JDK 17
-      uses: actions/setup-kotlin@v4
+      uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
