--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,8 @@
+org.gradle.jvmargs=-Xmx8g -XX:MaxMetaspaceSize=4g -Dfile.encoding=UTF-8
+org.gradle.configureondemand=true
+org.gradle.configuration-cache=true
+org.gradle.caching=true
+org.gradle.parallel=true
 kotlin.code.style=official
 android.useAndroidX=true
 android.enableJetifier=true
